1994-05-23  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h: use new include for fcntl.h

	* src/ded.c: use SYS5_CURSES

	* src/dedname.c: use HAVE_RENAME

	* src/ded2s.c:
	use autoconf's tests for 'major()' and 'minor()' includes

1994-05-22  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c, src/dedtype.c, src/dedscan.c: rename-DIRENT

1994-05-09  Thomas E. Dickey  <dickey@clark.net>

	* src/dedtype.c:
	coded around bug in Linux's 'ftell()', which resets the eof-flag

1994-04-27  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c:
	provided sys5-like defaults for EDITOR, other environment variables
	(really do need a configure-script)

1994-04-26  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h:
	Linux has the same regex-code as hpux (maybe HP wasn't wrong...)

1994-04-01  Thomas E. Dickey  <dickey@clark.net>

	* COPYING: notice for alt.sources

	* COPYING: standardized my language

1994-03-09  dickey@software.org

	* src/dedview.c:
	corrected a place in 'showMARK()' where I clobbered the current location

1993-12-17  dickey@software.org

	* src/dedtype.c:
	adjusted call on 'markC()' to account for new variable 'mrkfile'

1993-12-16  dickey@software.org

	* src/dedview.c, src/dedring.c, src/ded.h: mrkfile-hack

1993-12-06  dickey@software.org

	* src/version.h: added 'S' sort
	optimized some of the screen refreshing

	* src/dedsort.c, src/sortset.c, src/ded.hlp, src/ded2s.c:
	added 'S' sort

1993-12-02  dickey@software.org

	* src/ftree.c: forgot to set 'showdiff' in 'uprow()'

	* src/ded.c: 'resleep()' needs a call on 'refresh()' !

1993-12-01  dickey@software.org

	* src/dedview.c: clear workspace if I adjust its size

	* src/dlog.c: moved most 'refresh()' calls under 'dlog_char()'
	This fixes a problem where repeated "+" commands would result in unnecessary
	calls to refresh the screen (during simulated scrolling)

	* src/dedtype.c: removed unnecessary 'refresh()'

	* src/ded.c: removed unnecessary 'refresh()' calls
